<resources>
    <string name="app_name">BWAMOV</string>
    <string name="lewati_perkenalan">LEWATI PERKENALAN</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">NOW PLAYING</string>
    <string name="now_playing_desc">Lebih mudah mengetahui \nfilm yang sedang tampil</string>

    <string name="pre_sale">PRE SALE</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan \nupdate film terbaru</string>

    <string name="cashless">CASHLESS</string>
    <string name="cashless_desc">Gunakan e-wallet \nuntuk transaksi tiket nonton</string>
    <string name="memulai">MEMULAI</string>
    <string name="daftar_akun">DAFTAR AKUN BARU</string>
    <string name="login">MASUK AKUN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="nama">Nama</string>
    <string name="email_address">Email Address</string>
    <string name="upload_nanti">UPLOAD NANTI</string>
    <string name="photo">PHOTO</string>
    <string name="selamat_datang">Welcome, \nAngga Risky</string>
    <string name="simpan_dan_lanjutkan">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="judul_film">Avengers: Infinity Wars</string>
    <string name="genre">Action, Sci-fi, Kids</string>
    <string name="storyboard">Storyboard</string>
    <string name="storyboard_desc">The Avengers must stop Thanos, a mad Titan, and his army from getting their hands on all the infinity stones. However, the mad Titan is prepared to go to any lengths to carry out his insane plan.</string>
    <string name="whos_played">Who\'s Played</string>
    <string name="pilih_bangku">PILIH BANGKU</string>
    <string name="layar_bioskop">Layar Bioskop</string>
    <string name="beli_tiket">beli tiket</string>
    <string name="empty">Empty</string>
    <string name="check_out">CHECK OUT</string>
    <string name="batalkan">Batalkan</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="tv_total">Total Harus Dibayar</string>
    <string name="ewallet">E-Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="checkout_failed">Saldo pada e-wallet kamu tidak mencukupi \nuntuk melakukan transaksi</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="happy_watching">Happy Watching!</string>
    <string name="happy_watching_desc">Tiket telah berhasil dibeli dan \nselamat menikmati film</string>
    <string name="simpan_data">Simpan Data Baru</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_wallet">My Wallet</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="saldo_tersedia">Saldo tersedia</string>
    <string name="history">HISTORY</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booked">Booked</string>
    <string name="selected">Selected</string>
    <string name="scan_qr">Scan QR</string>
    <string name="quick_print">Quick Print</string>
    <string name="setting">Setting</string>
    <string name="sign_out">Sign Out</string>
</resources>